More contrast fixes

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', Verdana, sans-serif;
+    font-family: 'Arial', Verdana;
     background-color: #000000;
     color: #ffffff;
     margin: 20px;
@@ -14,7 +14,7 @@ body {
   
   h2 {
     font-size: 30px;
-    color: #0d0d0d;
+    color: #0D0D0D;
   }
   
   p {
@@ -58,6 +58,15 @@ body {
     border-top: 2px solid #ffffff;
     color: #c4c4c4; /* Fix color contrast */
   }
+
+  .blue h2 {
+    color: #C4C4C4;
+  }
+  
+  .blue p {
+    color: #C4C4C4;
+  }
+  
   
   .yellow {
     background-color: #ffff00;
@@ -66,6 +75,10 @@ body {
     border-bottom: 2px solid #ffffff;
     border-left: 5px solid #ffffff;
     color: #707070; /* Fix color contrast */
+  }
+
+  .yellow p {
+    color: #707070;
   }
   
   .green {
